--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<h1>ระบบนับจำนวน 96 ช่อง (Auto Save)</h1>
+<!DOCTYPE html>
+<html lang="th">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ระบบนับจำนวน 96 ช่อง</title>
+    
+    <link rel="stylesheet" href="Acounter.css"> 
+</head>
+<body>
+
+    <h1>ระบบนับจำนวน 96 ช่อง (Auto Save)</h1>
 
     <div class="controls">
         <div class="total-display">
@@ -11,3 +22,8 @@
         <div id="counter-grid">
             </div>
     </div>
+
+    <script src="Acounter.js"></script>
+
+</body>
+</html>
